--- a/rnaseq/Dockerfile
+++ b/rnaseq/Dockerfile
@@ -1,4 +1,4 @@
-# Dockerfile for GTEx RNA-seq pipeline. Version 0.3
+# Dockerfile for GTEx RNA-seq pipeline
 FROM ubuntu:16.04
 MAINTAINER Francois Aguet
 
@@ -6,9 +6,13 @@ RUN apt-get update && apt-get install -y software-properties-common && add-apt-r
     apt-get update && apt-get install -y \
         build-essential \
         cmake \
-        libboost-dev \
-        libboost-program-options-dev \
+        curl \
+        libboost-all-dev \
+        libbz2-dev \
+        libcurl3-dev \
+        liblzma-dev \
         libncurses5-dev \
+        libssl-dev \
         openjdk-7-jdk \
         openjdk-8-jdk \
         python3 \
@@ -24,40 +28,40 @@ RUN apt-get update && apt-get install -y software-properties-common && add-apt-r
 # Pipeline components
 #-----------------------------
 
-# samtools
-RUN cd /opt && \
-    wget --no-check-certificate https://github.com/samtools/samtools/releases/download/1.3.1/samtools-1.3.1.tar.bz2 && \
-    tar -xf samtools-1.3.1.tar.bz2 && rm samtools-1.3.1.tar.bz2 && cd samtools-1.3.1 && make && make install && make clean
-
 # htslib
 RUN cd /opt && \
-    wget --no-check-certificate https://github.com/samtools/htslib/releases/download/1.3.1/htslib-1.3.1.tar.bz2 && \
-    tar -xf htslib-1.3.1.tar.bz2 && rm htslib-1.3.1.tar.bz2 && cd htslib-1.3.1 && make && make install && make clean
+    wget --no-check-certificate https://github.com/samtools/htslib/releases/download/1.4.1/htslib-1.4.1.tar.bz2 && \
+    tar -xf htslib-1.4.1.tar.bz2 && rm htslib-1.4.1.tar.bz2 && cd htslib-1.4.1 && make && make install && make clean
+
+# samtools
+RUN cd /opt && \
+    wget --no-check-certificate https://github.com/samtools/samtools/releases/download/1.4.1/samtools-1.4.1.tar.bz2 && \
+    tar -xf samtools-1.4.1.tar.bz2 && rm samtools-1.4.1.tar.bz2 && cd samtools-1.4.1 && \
+    ./configure --with-htslib=/opt/htslib-1.4.1 && make && make install && make clean
 
 # bamtools
 RUN cd /opt && \
-    wget --no-check-certificate https://github.com/pezmaster31/bamtools/archive/v2.4.0.tar.gz && \
-    tar -xf v2.4.0.tar.gz && rm v2.4.0.tar.gz && cd bamtools-2.4.0 && mkdir build && cd build && cmake .. && make && make install && make clean
+    wget --no-check-certificate https://github.com/pezmaster31/bamtools/archive/v2.4.1.tar.gz && \
+    tar -xf v2.4.1.tar.gz && rm v2.4.1.tar.gz && cd bamtools-2.4.1 && mkdir build && cd build && cmake .. && make && make install && make clean
 ENV LD_LIBRARY_PATH /usr/local/lib/bamtools:$LD_LIBRARY_PATH
 
 # Picard tools
-RUN cd /opt && \
-    wget --no-check-certificate https://github.com/broadinstitute/picard/releases/download/2.5.0/picard-tools-2.5.0.zip && \
-    unzip picard-tools-2.5.0.zip && mv picard-tools-2.5.0 picard-tools && rm picard-tools-2.5.0.zip
+RUN mkdir /opt/picard-tools && \
+    wget --no-check-certificate -P /opt/picard-tools/ https://github.com/broadinstitute/picard/releases/download/2.9.0/picard.jar
 
-# RSEM v1.2.22
+# STAR v2.5.3a
 RUN cd /opt && \
-    wget --no-check-certificate https://github.com/deweylab/RSEM/archive/v1.2.22.tar.gz && \
-    tar -xvf v1.2.22.tar.gz && rm v1.2.22.tar.gz && cd RSEM-1.2.22 && make
-ENV PATH /opt/RSEM-1.2.22:$PATH
+    wget --no-check-certificate https://github.com/alexdobin/STAR/archive/2.5.3a.tar.gz && \
+    tar -xf 2.5.3a.tar.gz && rm 2.5.3a.tar.gz && \
+    make STAR -C STAR-2.5.3a/source && make STARlong -C STAR-2.5.3a/source && \
+    mv STAR-2.5.3a/source/STAR* STAR-2.5.3a/bin/Linux_x86_64/
+ENV PATH /opt/STAR-2.5.3a/bin/Linux_x86_64:$PATH
 
-# STAR v2.4.2a
+# RSEM v1.3.0
 RUN cd /opt && \
-    wget --no-check-certificate https://github.com/alexdobin/STAR/archive/STAR_2.4.2a.tar.gz && \
-    tar -xf STAR_2.4.2a.tar.gz && rm STAR_2.4.2a.tar.gz && mv STAR-STAR_2.4.2a STAR_2.4.2a && \
-    make STAR -C STAR_2.4.2a/source && make STARlong -C STAR_2.4.2a/source && \
-    mv STAR_2.4.2a/source/STAR* STAR_2.4.2a/bin/Linux_x86_64/
-ENV PATH /opt/STAR_2.4.2a/bin/Linux_x86_64:$PATH
+    wget --no-check-certificate https://github.com/deweylab/RSEM/archive/v1.3.0.tar.gz && \
+    tar -xvf v1.3.0.tar.gz && rm v1.3.0.tar.gz && cd RSEM-1.3.0 && make
+ENV PATH /opt/RSEM-1.3.0:$PATH
 
 # RNA-SeQC
 RUN cd /opt && \
@@ -70,10 +74,13 @@ RUN cd /opt/bamsync && make
 ENV PATH /opt/bamsync:$PATH
 
 # python modules
-RUN pip3 install pandas
+RUN pip3 install --upgrade pip && pip3 install tables pandas
 
-# scripts
-COPY src src/
+# Salmon v0.8.2
+RUN cd /opt && \
+    wget https://github.com/COMBINE-lab/salmon/releases/download/v0.8.2/Salmon-0.8.2_linux_x86_64.tar.gz && \
+    tar -xvf Salmon-0.8.2_linux_x86_64.tar.gz && rm Salmon-0.8.2_linux_x86_64.tar.gz
+ENV PATH $PATH:/opt/Salmon-0.8.2_linux_x86_64/bin
 
 # clean up
 RUN apt-get clean && \
@@ -81,3 +88,6 @@ RUN apt-get clean && \
     apt-get autoclean && \
     apt-get autoremove -y && \
     rm -rf /var/lib/{apt,dpkg,cache,log}/
+
+# scripts
+COPY src src/
