Added BEDTools and UCSC tools

--- a/rnaseq/Dockerfile
+++ b/rnaseq/Dockerfile
@@ -30,14 +30,14 @@ RUN apt-get update && apt-get install -y software-properties-common && add-apt-r
 
 # htslib
 RUN cd /opt && \
-    wget --no-check-certificate https://github.com/samtools/htslib/releases/download/1.4.1/htslib-1.4.1.tar.bz2 && \
-    tar -xf htslib-1.4.1.tar.bz2 && rm htslib-1.4.1.tar.bz2 && cd htslib-1.4.1 && make && make install && make clean
+    wget --no-check-certificate https://github.com/samtools/htslib/releases/download/1.6/htslib-1.6.tar.bz2 && \
+    tar -xf htslib-1.6.tar.bz2 && rm htslib-1.6.tar.bz2 && cd htslib-1.6 && make && make install && make clean
 
 # samtools
 RUN cd /opt && \
-    wget --no-check-certificate https://github.com/samtools/samtools/releases/download/1.4.1/samtools-1.4.1.tar.bz2 && \
-    tar -xf samtools-1.4.1.tar.bz2 && rm samtools-1.4.1.tar.bz2 && cd samtools-1.4.1 && \
-    ./configure --with-htslib=/opt/htslib-1.4.1 && make && make install && make clean
+    wget --no-check-certificate https://github.com/samtools/samtools/releases/download/1.6/samtools-1.6.tar.bz2 && \
+    tar -xf samtools-1.6.tar.bz2 && rm samtools-1.6.tar.bz2 && cd samtools-1.6 && \
+    ./configure --with-htslib=/opt/htslib-1.6 && make && make install && make clean
 
 # bamtools
 RUN cd /opt && \
@@ -74,13 +74,27 @@ RUN cd /opt/bamsync && make
 ENV PATH /opt/bamsync:$PATH
 
 # python modules
-RUN pip3 install --upgrade pip && pip3 install tables pandas feather-format
+RUN pip3 install --upgrade pip && pip3 install tables numpy pandas feather-format
+RUN pip3 install pyBigWig
 
 # kallisto v0.43.1
 RUN cd /opt && \
     wget https://github.com/pachterlab/kallisto/releases/download/v0.43.1/kallisto_linux-v0.43.1.tar.gz && \
     tar -xf kallisto_linux-v0.43.1.tar.gz && rm kallisto_linux-v0.43.1.tar.gz
 ENV PATH $PATH:/opt/kallisto_linux-v0.43.1
+
+# bedtools
+RUN cd /opt && \
+    wget --no-check-certificate https://github.com/arq5x/bedtools2/releases/download/v2.26.0/bedtools-2.26.0.tar.gz && \
+    tar -xf bedtools-2.26.0.tar.gz && rm bedtools-2.26.0.tar.gz && \
+    cd bedtools2 && make && make install && make clean
+
+# UCSC tools
+RUN mkdir /opt/ucsc && \
+    wget --no-check-certificate -P /opt/ucsc/ http://hgdownload.soe.ucsc.edu/admin/exe/linux.x86_64/bigWigToBedGraph && \
+    wget --no-check-certificate -P /opt/ucsc/ http://hgdownload.soe.ucsc.edu/admin/exe/linux.x86_64/bedGraphToBigWig && \
+    chmod 755 /opt/ucsc/*
+ENV PATH /opt/ucsc:$PATH
 
 # clean up
 RUN apt-get clean && \
