--- a/rnaseq/Dockerfile
+++ b/rnaseq/Dockerfile
@@ -34,24 +34,22 @@ RUN apt-get update && apt-get install -y software-properties-common && \
 
 # htslib
 RUN cd /opt && \
-    wget --no-check-certificate https://github.com/samtools/htslib/releases/download/1.10.2/htslib-1.10.2.tar.bz2 && \
-    tar -xf htslib-1.10.2.tar.bz2 && rm htslib-1.10.2.tar.bz2 && cd htslib-1.10.2 && \
+    wget --no-check-certificate https://github.com/samtools/htslib/releases/download/1.11/htslib-1.11.tar.bz2 && \
+    tar -xf htslib-1.11.tar.bz2 && rm htslib-1.11.tar.bz2 && cd htslib-1.11 && \
     ./configure --enable-libcurl --enable-s3 --enable-plugins --enable-gcs && \
     make && make install && make clean
 
 # samtools
 RUN cd /opt && \
-    wget --no-check-certificate https://github.com/samtools/samtools/releases/download/1.10/samtools-1.10.tar.bz2 && \
-    tar -xf samtools-1.10.tar.bz2 && rm samtools-1.10.tar.bz2 && cd samtools-1.10 && \
-    ./configure --with-htslib=/opt/htslib-1.10.2 && make && make install && make clean
+    wget --no-check-certificate https://github.com/samtools/samtools/releases/download/1.11/samtools-1.11.tar.bz2 && \
+    tar -xf samtools-1.11.tar.bz2 && rm samtools-1.11.tar.bz2 && cd samtools-1.11 && \
+    ./configure --with-htslib=/opt/htslib-1.11 && make && make install && make clean
 
-# STAR v2.7.5c
+# STAR v2.7.8a
 RUN cd /opt && \
-    wget --no-check-certificate https://github.com/alexdobin/STAR/archive/2.7.5c.tar.gz && \
-    tar -xf 2.7.5c.tar.gz && rm 2.7.5c.tar.gz
-    # make STAR -C STAR-2.7.5c/source && make STARlong -C STAR-2.7.5c/source && \
-    # mv STAR-2.7.5c/source/STAR* STAR-2.7.5c/bin/Linux_x86_64/
-ENV PATH /opt/STAR-2.7.5c/bin/Linux_x86_64_static:$PATH
+    wget --no-check-certificate https://github.com/alexdobin/STAR/archive/2.7.8a.tar.gz && \
+    tar -xf 2.7.8a.tar.gz && rm 2.7.8a.tar.gz
+ENV PATH /opt/STAR-2.7.8a/bin/Linux_x86_64_static:$PATH
 
 # RSEM v1.3.3
 RUN cd /opt && \
@@ -72,7 +70,7 @@ ENV PATH /opt/bamsync:$PATH
 
 # Picard tools
 RUN mkdir /opt/picard-tools && \
-    wget --no-check-certificate -P /opt/picard-tools/ https://github.com/broadinstitute/picard/releases/download/2.23.3/picard.jar
+    wget --no-check-certificate -P /opt/picard-tools/ https://github.com/broadinstitute/picard/releases/download/2.25.0/picard.jar
 
 # kallisto
 RUN cd /opt && \
@@ -82,8 +80,8 @@ ENV PATH $PATH:/opt/kallisto_linux-v0.46.2
 
 # bedtools
 RUN cd /opt && \
-    wget --no-check-certificate https://github.com/arq5x/bedtools2/releases/download/v2.29.2/bedtools-2.29.2.tar.gz && \
-    tar -xf bedtools-2.29.2.tar.gz && rm bedtools-2.29.2.tar.gz && \
+    wget --no-check-certificate https://github.com/arq5x/bedtools2/releases/download/v2.30.0/bedtools-2.30.0.tar.gz && \
+    tar -xf bedtools-2.30.0.tar.gz && rm bedtools-2.30.0.tar.gz && \
     cd bedtools2 && make && make install && make clean
 
 # UCSC tools
@@ -107,8 +105,8 @@ ENV PATH /opt/FastQC-0.11.9:$PATH
 
 # RNA-SeQC
 RUN mkdir /opt/rnaseqc && cd /opt/rnaseqc && \
-    wget https://github.com/getzlab/rnaseqc/releases/download/v2.3.6/rnaseqc.v2.3.6.linux.gz && \
-    gunzip rnaseqc.v2.3.6.linux.gz && mv rnaseqc.v2.3.6.linux rnaseqc && chmod 775 rnaseqc
+    wget https://github.com/getzlab/rnaseqc/releases/download/v2.4.0/rnaseqc.v2.4.0.linux.gz && \
+    gunzip rnaseqc.v2.4.0.linux.gz && mv rnaseqc.v2.4.0.linux rnaseqc && chmod 775 rnaseqc
 RUN pip3 install rnaseqc
 ENV PATH /opt/rnaseqc:$PATH
 
